--- a/Plantshare/app/assets/stylesheets/api/plants.scss
+++ b/Plantshare/app/assets/stylesheets/api/plants.scss
@@ -9,9 +9,9 @@
 .plant-index{
   display: flex;
   flex-direction: column;
-
   margin: 10px;
   list-style: none;
+  border: 1px solid lightgray;
 }
 
 .plant-index-container h1{
@@ -25,4 +25,29 @@
   padding: 20px;
 
   border: 1px solid lightgrey;
+}
+
+.plant-tab-buttons{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: -10px;
+}
+
+.plant-tab-buttons button {
+  display: inline-block;
+
+  border: 1px solid lightgrey;
+  border-bottom: 0px;
+  background-color: white;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  padding: 10px;
+}
+
+.plant-tab-buttons .active{
+  background-color: lightblue;
+
+  border-bottom-color: white;
 }
