--- a/Plantshare/app/assets/stylesheets/application.css
+++ b/Plantshare/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  *= require font-awesome
  */
 
-html, body, header, section, article, div, h1, h2, h3, h4, form, ul, li, input, a {
+html, body, header, section, article, div, h1, h2, h3, h4, form, ul, li, input, a, button {
  margin: 0;
  padding: 0;
  border: 0;
