--- a/Plantshare/app/assets/stylesheets/api/plants.scss
+++ b/Plantshare/app/assets/stylesheets/api/plants.scss
@@ -51,3 +51,48 @@
 
   border-bottom-color: white;
 }
+
+.plant-form-container{
+  font-family: 'Lato', sans-serif;
+}
+
+.plant-form{
+  display: flex;
+  flex-direction: column;
+}
+
+.plant-form input[type="text"]{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 30%;
+  height: 30px;
+
+  font-family: inherit;
+
+  text-align: left;
+  text-indent: 5px;
+  font-size: 15px;
+  background-color: #e2e2e2;
+  border: 0px;
+}
+
+.plant-form textarea{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 50px;
+
+  font-family: inherit;
+
+  text-align: left;
+  text-indent: 5px;
+  font-size: 15px;
+  background-color: #e2e2e2;
+  border: 0px;
+}
+
+.plant-form-submit input[type="submit"]{
+  float: right;
+  margin-right: 0px;
+  width: 80px;
+}
